--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -21,6 +21,8 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
     - name: Build
+      working-directory: src
       run: dotnet build --configuration Release --no-restore
     - name: Test
+      working-directory: src
       run: dotnet test --no-restore --verbosity normal
