--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -9,8 +9,9 @@ on:
 
 jobs:
   build:
-
+    
     runs-on: ubuntu-latest
+    
 
     steps:
     - uses: actions/checkout@v2
@@ -19,6 +20,7 @@ jobs:
       with:
         dotnet-version: 3.1.301
     - name: Install dependencies
+      working-directory: src
       run: dotnet restore
     - name: Build
       working-directory: src
