--- a/.github/workflows/dotnet-core-publish.yml
+++ b/.github/workflows/dotnet-core-publish.yml
@@ -25,11 +25,9 @@ jobs:
     - name: Test
       working-directory: src
       run: dotnet test --no-restore --verbosity normal
-    - name: Push
-      working-directory: src
     - name: Pack NuGet
       working-directory: src
       run: dotnet pack --configuration Release /p:Version=${{ github.ref }}
-    - name: Publish NuGet
+    - name: Push NuGet
       working-directory: src
       run: dotnet nuget push -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json VCEL.Core/bin/Release/VCEL.Core.${{ github.ref }}.nupkg
