--- a/.github/workflows/dotnet-core-publish.yml
+++ b/.github/workflows/dotnet-core-publish.yml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Set env
+      run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
@@ -27,7 +29,7 @@ jobs:
       run: dotnet test --no-restore --verbosity normal
     - name: Pack NuGet
       working-directory: src
-      run: dotnet pack --configuration Release /p:Version=${{ github.ref }}
+      run: dotnet pack --configuration Release /p:Version=${{ env.RELEASE_VERSION }}
     - name: Push NuGet
       working-directory: src
-      run: dotnet nuget push -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json VCEL.Core/bin/Release/VCEL.Core.${{ github.ref }}.nupkg
+      run: dotnet nuget push -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json VCEL.Core/bin/Release/VCEL.Core.${{ env.RELEASE_VERSION }}.nupkg
