--- a/.github/workflows/dotnet-core-publish.yml
+++ b/.github/workflows/dotnet-core-publish.yml
@@ -14,6 +14,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set env
       run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
+    - name: Setup package source
+      run: dotnet nuget add source https://nuget.pkg.github.com/EclipseTrading/index.json -n github -u EclipseTrading -p ${{secrets.GITHUB_TOKEN}}
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
@@ -35,4 +37,4 @@ jobs:
       run: dotnet nuget push -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json VCEL.Core/bin/Release/VCEL.Core.${{ env.RELEASE_VERSION }}.nupkg
     - name: Push GitHub Packages
       working-directory: src
-      run: dotnet nuget push -k ${{secrets.GITHUB_TOKEN}} -s https://nuget.pkg.github.com/EclipseTrading/index.json VCEL.Core/bin/Release/VCEL.Core.${{ env.RELEASE_VERSION }}.nupkg
+      run: dotnet nuget push -k ${{secrets.GITHUB_TOKEN}} -s "github" VCEL.Core/bin/Release/VCEL.Core.${{ env.RELEASE_VERSION }}.nupkg
