--- a/.github/workflows/dotnet-core-publish.yml
+++ b/.github/workflows/dotnet-core-publish.yml
@@ -37,4 +37,4 @@ jobs:
       run: dotnet nuget push -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json VCEL.Core/bin/Release/VCEL.Core.${{ env.RELEASE_VERSION }}.nupkg
     - name: Push GitHub Packages
       working-directory: src
-      run: dotnet nuget push -k ${{secrets.GITHUB_TOKEN}} -s "github" VCEL.Core/bin/Release/VCEL.Core.${{ env.RELEASE_VERSION }}.nupkg
+      run: dotnet nuget push VCEL.Core/bin/Release/VCEL.Core.${{ env.RELEASE_VERSION }}.nupkg --source "github"
