--- a/src/Tests/SpelBenchmark/SpelBenchmark.csproj
+++ b/src/Tests/SpelBenchmark/SpelBenchmark.csproj
@@ -10,9 +10,10 @@
     <!-- We know these are .NET Framework Packages, but we still want to leave this 
          as a .NET Core project so we can build on Linux
          -->
-    <PackageReference Include="Spring.Core" Version="2.0.1" NoWarn="NU1701"/>
-    <PackageReference Include="Common.Logging" Version="3.0.0" NoWarn="NU1701"/>
-    <PackageReference Include="Common.Logging.Core" Version="3.0.0" NoWarn="NU1701"/>
+    <PackageReference Include="Spring.Core" Version="2.0.1" NoWarn="NU1701" />
+    <PackageReference Include="Common.Logging" Version="3.0.0" NoWarn="NU1701" />
+    <PackageReference Include="Common.Logging.Core" Version="3.0.0" NoWarn="NU1701" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\VCEL.Core\VCEL.Core.csproj" />
