VC-3457 move translation code to seperate project

--- a/src/Tests/VCEL.Test/VCEL.Test.csproj
+++ b/src/Tests/VCEL.Test/VCEL.Test.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\VCEL.Core\VCEL.Core.csproj" />
+    <ProjectReference Include="..\..\VCEL.JS\VCEL.JS.csproj" />
     <ProjectReference Include="..\VCEL.Test.Shared\VCEL.Test.Shared.csproj" />
   </ItemGroup>
 
