VC-3457 added project description for VCEL.JS

--- a/.github/workflows/dotnet-core-publish.yml
+++ b/.github/workflows/dotnet-core-publish.yml
@@ -32,9 +32,12 @@ jobs:
     - name: Pack NuGet
       working-directory: src
       run: dotnet pack --configuration Release /p:Version=${{ env.RELEASE_VERSION }}
-    - name: Push NuGet
+    - name: Push NuGet - VCEL.Core
       working-directory: src
       run: dotnet nuget push -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json VCEL.Core/bin/Release/VCEL.Core.${{ env.RELEASE_VERSION }}.nupkg
+    - name: Push NuGet - VCEL.JS
+      working-directory: src
+      run: dotnet nuget push -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json VCEL.Core/bin/Release/VCEL.JS.${{ env.RELEASE_VERSION }}.nupkg
     - name: Push GitHub Packages
       working-directory: src
       run: dotnet nuget push VCEL.Core/bin/Release/VCEL.Core.${{ env.RELEASE_VERSION }}.nupkg --source "github"
