--- a/src/VCEL.JS/VCEL.JS.csproj
+++ b/src/VCEL.JS/VCEL.JS.csproj
@@ -14,5 +14,12 @@
   <ItemGroup>
     <ProjectReference Include="..\VCEL.Core\VCEL.Core.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>  
 
 </Project>
