--- a/.github/workflows/dotnet-core-publish.yml
+++ b/.github/workflows/dotnet-core-publish.yml
@@ -37,7 +37,7 @@ jobs:
       run: dotnet nuget push -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json VCEL.Core/bin/Release/VCEL.Core.${{ env.RELEASE_VERSION }}.nupkg
     - name: Push NuGet - VCEL.JS
       working-directory: src
-      run: dotnet nuget push -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json VCEL.Core/bin/Release/VCEL.JS.${{ env.RELEASE_VERSION }}.nupkg
+      run: dotnet nuget push -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json VCEL.JS/bin/Release/VCEL.JS.${{ env.RELEASE_VERSION }}.nupkg
     - name: Push GitHub Packages
       working-directory: src
       run: dotnet nuget push VCEL.Core/bin/Release/VCEL.Core.${{ env.RELEASE_VERSION }}.nupkg --source "github"
