--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -9,16 +9,16 @@ on:
 
 jobs:
   build:
-    
+
     runs-on: ubuntu-latest
-    
+
 
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.301
+        dotnet-version: 5.0.x
     - name: Install dependencies
       working-directory: src
       run: dotnet restore
