--- a/src/Tests/VCEL.Benchmark/VCEL.Benchmark.csproj
+++ b/src/Tests/VCEL.Benchmark/VCEL.Benchmark.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\VCEL.Core\VCEL.Core.csproj" />
+    <ProjectReference Include="..\..\VCEL.JS\VCEL.JS.csproj" />
+    <ProjectReference Include="..\VCEL.Test.Shared\VCEL.Test.Shared.csproj" />
   </ItemGroup>
 
 </Project>
