Update publish to include VCEL CLI tool

--- a/.github/workflows/dotnet-core-publish.yml
+++ b/.github/workflows/dotnet-core-publish.yml
@@ -24,7 +24,7 @@ jobs:
       working-directory: src
       run: dotnet restore
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build --configuration Release --no-restore /p:Version=${{ env.RELEASE_VERSION }}
       working-directory: src
     - name: Test
       working-directory: src
@@ -38,6 +38,15 @@ jobs:
     - name: Push NuGet - VCEL.JS
       working-directory: src
       run: dotnet nuget push -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json VCEL.JS/bin/Release/VCEL.JS.${{ env.RELEASE_VERSION }}.nupkg
-    - name: Push GitHub Packages
+    - name: Push NuGet - VCEL.Cli
+      working-directory: src
+      run: dotnet nuget push -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json VCEL.Cli/bin/Release/VCEL.Cli.${{ env.RELEASE_VERSION }}.nupkg
+    - name: Push GitHub Packages - VCEL.Core
       working-directory: src
       run: dotnet nuget push VCEL.Core/bin/Release/VCEL.Core.${{ env.RELEASE_VERSION }}.nupkg --source "github"
+    - name: Push GitHub Packages - VCEL.JS
+      working-directory: src
+      run: dotnet nuget push VCEL.JS/bin/Release/VCEL.JS.${{ env.RELEASE_VERSION }}.nupkg --source "github"
+    - name: Push GitHub Packages - VCEL.Cli
+      working-directory: src
+      run: dotnet nuget push VCEL.Cli/bin/Release/VCEL.Cli.${{ env.RELEASE_VERSION }}.nupkg --source "github"
