--- a/src/Tests/VCEL.Test.Shared/VCEL.Test.Shared.csproj
+++ b/src/Tests/VCEL.Test.Shared/VCEL.Test.Shared.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\VCEL.Core\VCEL.Core.csproj" />
+    <ProjectReference Include="..\..\VCEL.CSharp\VCEL.CSharp.csproj" />
+  </ItemGroup>
+
 </Project>
