VC-4746 Add parse command to Cli tool

--- a/src/VCEL.Cli/VCEL.Cli.csproj
+++ b/src/VCEL.Cli/VCEL.Cli.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\VCEL.Core\VCEL.Core.csproj" />
+    <ProjectReference Include="..\VCEL.CSharp\VCEL.CSharp.csproj" />
   </ItemGroup>
 
   <ItemGroup>
