--- a/src/VCEL.CSharp/VCEL.CSharp.csproj
+++ b/src/VCEL.CSharp/VCEL.CSharp.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
-        <LangVersion>7.3</LangVersion>
+        <TargetFramework>netstandard2.1</TargetFramework>
+        <LangVersion>8</LangVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Authors>Jeff Weng</Authors>
         <Company>Eclipse Trading</Company>
@@ -10,6 +10,7 @@
         <Description>An extention to VCEL that translates VCEL expressions into CSharp code</Description>
         <RepositoryUrl>https://github.com/EclipseTrading/vcel</RepositoryUrl>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
