--- a/src/VCEL.CSharp/VCEL.CSharp.csproj
+++ b/src/VCEL.CSharp/VCEL.CSharp.csproj
@@ -18,8 +18,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="3.10.0-3.final" />
-      <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.10.0-3.final" />
+      <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.2.0" />
+      <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.2.0" />
       <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
       <PackageReference Include="System.CodeDom" Version="4.5.0" />
       <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
