--- a/src/VCEL.Core/VCEL.Core.csproj
+++ b/src/VCEL.Core/VCEL.Core.csproj
@@ -41,4 +41,9 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="Lang\VCELLexer.g4" />
+    <Content Include="Lang\VCELParser.g4" />
+  </ItemGroup>
+
 </Project>
