--- a/src/Tests/Spel.Benchmark/Spel.Benchmark.csproj
+++ b/src/Tests/Spel.Benchmark/Spel.Benchmark.csproj
@@ -1,25 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ApplicationIcon />
     <StartupObject>Spel.Benchmark.Program</StartupObject>
   </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
-    <!-- We know these are .NET Framework Packages, but we still want to leave this 
-          as a .NET Core project so we can build on Linux
-    -->
-    <PackageReference Include="Spring.Core" Version="2.0.1" NoWarn="NU1701" />
-    <PackageReference Include="Common.Logging" Version="3.0.0" NoWarn="NU1701" />
-    <PackageReference Include="Common.Logging.Core" Version="3.0.0" NoWarn="NU1701" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+    <PackageReference Include="BenchmarkDotNet" />
+    <PackageReference Include="Spring.Core" />
   </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\VCEL.Core\VCEL.Core.csproj" />
     <ProjectReference Include="..\VCEL.Test.Shared\VCEL.Test.Shared.csproj" />
   </ItemGroup>
+
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
+
  </Project>
