--- a/src/VCEL.Core/VCEL.Core.csproj
+++ b/src/VCEL.Core/VCEL.Core.csproj
@@ -1,26 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Brian Flynn</Authors>
-    <Company>Eclipse Trading</Company>
     <Product>View Client Expression Language</Product>
     <Description>Spring Expression Like Expression Language</Description>
-    <RepositoryUrl>https://github.com/EclipseTrading/vcel</RepositoryUrl>
-    <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <LangVersion>8</LangVersion>
-    <Nullable>enable</Nullable>
-    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Antlr4" Version="4.6.6">
+    <PackageReference Include="Antlr4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Antlr4.Runtime" Version="4.6.6" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="System.Collections.Immutable" Version="1.7.1" />
+    <PackageReference Include="Antlr4.Runtime" />
+    <PackageReference Include="Newtonsoft.Json" />
+    <PackageReference Include="System.Collections.Immutable" />
+    <PackageReference Include="Spring.Core" NoWarn="NU1701" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,13 +26,6 @@
     <Antlr4 Update="Lang\VCELParser.g4">
       <Listener>false</Listener>
     </Antlr4>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="..\..\LICENSE">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
   </ItemGroup>
 
   <ItemGroup>
