--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -11,13 +11,12 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
-<!--    <Features>strict</Features>-->
-<!--    <EnableNETAnalyzers>true</EnableNETAnalyzers>-->
-<!--    <AnalysisMode>Recommended</AnalysisMode>-->
-<!--    <WarningLevel>5</WarningLevel>-->
-<!--    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>-->
-<!--    <EnableNETAnalyzers>true</EnableNETAnalyzers>-->
-<!--    <AnalysisLevel>preview</AnalysisLevel>-->
+    <Features>strict</Features>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisMode>Default</AnalysisMode> <!-- TODO: Change to Recommended -->
+    <WarningLevel>5</WarningLevel>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <AnalysisLevel>latest</AnalysisLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
@@ -26,5 +25,11 @@
     <None Include="$([MSBuild]::GetPathOfFileAbove(Directory.Build.props, $(MSBuildThisFileDirectory)))/../../LICENSE" Pack="true" PackagePath="" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <NoWarn>
+      $(NoWarn),
+      NU1701, <!-- Our dependency on Spring.Core -->
+    </NoWarn>
+  </PropertyGroup>
 
 </Project>
