--- a/.github/workflows/dotnet-core-publish.yml
+++ b/.github/workflows/dotnet-core-publish.yml
@@ -1,4 +1,4 @@
-name: .NET Core Publish
+name: .NET Build, Test and Publish
 
 on:
   workflow_dispatch:
@@ -16,7 +16,11 @@ jobs:
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Setup package source
       run: dotnet nuget add source https://nuget.pkg.github.com/EclipseTrading/index.json -n github -u EclipseTrading -p ${{secrets.GITHUB_TOKEN}} --store-password-in-clear-text
-    - name: Setup .NET Core
+    - name: Setup .NET 6
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 6.0.x
+    - name: Setup .NET 8
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 8.0.x
