Add test to ensure function implementations match, implement bool and mod functions

--- a/src/VCEL.CSharp/VCEL.CSharp.csproj
+++ b/src/VCEL.CSharp/VCEL.CSharp.csproj
@@ -17,4 +17,8 @@
       <PackageReference Include="System.Collections.Immutable" />
     </ItemGroup>
 
+    <ItemGroup>
+      <InternalsVisibleTo Include="VCEL.Test" />
+    </ItemGroup>
+
 </Project>
