--- a/src/VCEL.JS/VCEL.JS.csproj
+++ b/src/VCEL.JS/VCEL.JS.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\VCEL.Core\VCEL.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="VCEL.Test" />
+  </ItemGroup>
+
 </Project>
