--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -14,7 +14,7 @@
     <Nullable>enable</Nullable>
     <Features>strict</Features>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
-    <AnalysisMode>Default</AnalysisMode> <!-- TODO: Change to Recommended -->
+    <AnalysisMode>Recommended</AnalysisMode>
     <WarningLevel>5</WarningLevel>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <AnalysisLevel>latest</AnalysisLevel>
@@ -30,6 +30,9 @@
     <NoWarn>
       $(NoWarn),
       NU1701, <!-- Our dependency on Spring.Core -->
+      CA1716, <!-- Identifiers should not match keywords -->
+      CA1720, <!-- Identifiers should not contain type names -->
+      CA2201, <!-- Do not raise reserved exception types -->
     </NoWarn>
   </PropertyGroup>
 
