--- a/src/Tests/Spel.Benchmark/Spel.Benchmark.csproj
+++ b/src/Tests/Spel.Benchmark/Spel.Benchmark.csproj
@@ -1,23 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFrameworks>net8.0</TargetFrameworks>
-    <StartupObject>Spel.Benchmark.Program</StartupObject>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net8.0</TargetFramework>
+        <StartupObject>Spel.Benchmark.Program</StartupObject>
+        <AnalysisMode>Default</AnalysisMode>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" />
-    <PackageReference Include="Spring.Core" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="BenchmarkDotNet" />
+        <PackageReference Include="Spring.Core" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\VCEL.Core\VCEL.Core.csproj" />
-    <ProjectReference Include="..\VCEL.Test.Shared\VCEL.Test.Shared.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\VCEL.Core\VCEL.Core.csproj" />
+        <ProjectReference Include="..\VCEL.Test.Shared\VCEL.Test.Shared.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Properties\" />
-  </ItemGroup>
+    <ItemGroup>
+        <Folder Include="Properties\" />
+    </ItemGroup>
 
- </Project>
+</Project>
