--- a/src/Tests/VCEL.Benchmark/VCEL.Benchmark.csproj
+++ b/src/Tests/VCEL.Benchmark/VCEL.Benchmark.csproj
@@ -1,17 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <AnalysisMode>Default</AnalysisMode>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="BenchmarkDotNet" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\VCEL.Core\VCEL.Core.csproj" />
-    <ProjectReference Include="..\..\VCEL.JS\VCEL.JS.csproj" />
-    <ProjectReference Include="..\VCEL.Test.Shared\VCEL.Test.Shared.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\VCEL.Core\VCEL.Core.csproj" />
+        <ProjectReference Include="..\..\VCEL.JS\VCEL.JS.csproj" />
+        <ProjectReference Include="..\VCEL.Test.Shared\VCEL.Test.Shared.csproj" />
+    </ItemGroup>
 
 </Project>
